--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "generate": "nuxt generate;npm run pdf;",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint",
-    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
+    "deploy": "push-dir --dir=dist --branch=master --cleanup"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
